# better-tldr

./: README.md  docker-compose.yml
backend/: Dockerfile  agent.py  main.py  pyproject.toml
backend/tests/: conftest.py  test_server.py
frontend/: Dockerfile  babel.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: LogoHeader.tsx  SummaryDisplay.tsx  SummaryForm.tsx
