[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "openai>=1.88.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "sentry-sdk[fastapi]>=2.30.0",
    "uvicorn>=0.34.3",
]
